--- a/src/moviedb/NewReviewGUI.form
+++ b/src/moviedb/NewReviewGUI.form
@@ -28,10 +28,7 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="lblUsername" alignment="0" max="32767" attributes="0"/>
                   <Group type="102" attributes="0">
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="lblRating" min="-2" max="-2" attributes="0"/>
-                          <Component id="txtRating" alignment="0" min="-2" pref="89" max="-2" attributes="0"/>
-                      </Group>
+                      <Component id="lblRating" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" attributes="0">
@@ -44,6 +41,10 @@
                           <Component id="txtUsername" alignment="0" min="-2" pref="145" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="0" pref="23" max="32767" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <Component id="txtRating" min="-2" pref="89" max="-2" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                   </Group>
               </Group>
           </Group>
