--- a/src/moviedb/Gui.form
+++ b/src/moviedb/Gui.form
@@ -40,7 +40,9 @@
                       <Component id="jPanel1" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="btnNewReview" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="509" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="359" max="-2" attributes="0"/>
+                      <Component id="btnTest" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="btnDelete" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="btnNewMovie" min="-2" max="-2" attributes="0"/>
@@ -68,6 +70,7 @@
                           <Component id="btnNewMovie" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="btnShowDetails" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="btnNewReview" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="btnTest" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
@@ -167,6 +170,14 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnNewReviewActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="btnTest">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Run Tests"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnTestActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
